# etf_blinky

./: .gitignore
docs/media/: Capacitor.dxf  Electret microphone.dxf  Resistor.dxf  Socket-14.dxf  Socket-8.dxf  tac-button.dxf
firmware/: .clang-format  CMakeLists.txt  Discolights.make  Makefile  adc.c  adc.h  bit_bang_spi.c  bit_bang_spi.h  compile_flags.txt  configure.sh  f_cpu.h  flash.sh  leds.c  leds.h  premake5.lua  test.c  tiny44a-toolchain.cmake
firmware/src/: adc.c  adc.h  bb_spi.c  bb_spi.h  button.c  button.h  discolights.c  dl_utils.h  leds.c  leds.h  pattern.c  pattern.h  scheduler.c  scheduler.h  sys.c  sys.h  timer.c  timer.h
firmware/tests/: test_scheduler.c
graphics/: evidente_logo.jfif
hardware/: audio.SchDoc  auido.SchDoc  etf_blink Isometric view.PCBDwf  etf_blink TH assembly.PCBDwf  etf_blink.PCBDwf  etf_blink.PcbDoc  etf_blink.PcbDoc.htm  etf_pwr.SchDoc  make_etf_great_again.BomDoc  make_etf_great_again.OutJob  make_etf_great_again.PrjPcb  make_etf_great_again.PrjPcbStructure  make_etf_great_again.SchDoc  mcu.SchDoc  sk9822.SchDoc
hardware/Manufacturing/: Bill of Materials-make_etf_great_again.xlsx  Pick Place for etf_blink.csv  Pick Place for etf_blink.txt  Status Report.Txt  etf_blink.DRR  etf_blink.EXTREP  etf_blink.GBL  etf_blink.GBO  etf_blink.GBP  etf_blink.GBS  etf_blink.GKO  etf_blink.GP1  etf_blink.GP2  etf_blink.GTL  etf_blink.GTO  etf_blink.GTP  etf_blink.GTS  etf_blink.LDP  etf_blink.REP  etf_blink.RUL  etf_blink.TXT  etf_blink.apr
simulation/: Audio peak detector with filter.asc
